[package]
name = "rasterspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rasterspace"
crate-type = ["cdylib"]

[dependencies]
num_cpus = "1.15.0"
numpy = "0.18.0"
ordered-float = "3.7.0"
pyo3 = "0.18.3"
